# asimov-telegram-module

./: CHANGES.md  Cargo.toml  README.md  build.rs  flake.nix
.asimov/: module.yaml
.github/workflows/: ci.yaml  release.yaml
src/: jq.rs  lib.rs  main.rs  shared.rs  telegram.rs
src/telegram/: messages.rs  mod.rs
