# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-telegram-module"
version = "0.0.1"
authors = ["ASIMOV Protocol <support@asimov.so>"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module for integration with the Telegram messaging service."
#documentation = "https://docs.rs/asimov-telegram-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-telegram-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = ["command-line-utilities", "text-processing"]
publish = true

[features]
default = ["all", "std"]
all = []
std = [
	"asimov-module/std",
	"clientele/std",
	"serde/std",
	"serde_json/std",
	"tracing/std",
	"tracing-subscriber/std",
]
unstable = []

[dependencies]
asimov-module = { version = "25.0.0-dev.21" }
clientele = { version = "0.3.8", default-features = false, features = [
	"all",
	"clap",
	"dotenv",
] }
jq = { version = "0.1", default-features = false, features = ["all"] }
miette = { version = "7.6", default-features = false, features = ["fancy"] }
oxrdf = { version = "0.2.4", default-features = false }
oxrdfio = { version = "0.1.8", default-features = false }
serde = { version = "1.0", default-features = false, features = [
	"alloc",
	"derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tdlib-rs = { git = "https://github.com/asimov-platform/tdlib-rs", features = [
	"download-tdlib",
	"static-tdjson",
] }
tokio = { version = "1.45", default-features = false, features = [
	"macros",
	"rt",
	"rt-multi-thread",
	"sync",
	"time",
] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
	"fmt",
] }
futures = "0.3.31"
async-stream = "0.3.6"
keyring = "2.3"
rand = "0.8"
hex = "0.4"
url = { version = "2.5.4", default-features = false }
obfstr = "0.4.4"

[build-dependencies]
tdlib-rs = { git = "https://github.com/asimov-platform/tdlib-rs", features = [
	"download-tdlib",
] }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-telegram-cataloger"
path = "src/bin/cataloger.rs"

[[bin]]
name = "asimov-telegram-configurator"
path = "src/bin/configurator.rs"

[[bin]]
name = "asimov-telegram-fetcher"
path = "src/bin/fetcher.rs"
